# ws-watcher

./: .gitignore  CMakeLists.txt  README.md
include/: watcher.hpp
src/: main.cpp  watcher.cpp
